src/components/hero.css
:root {
    /* --purple: rgb(123, 31, 162);
    --violet: rgb(103, 58, 183);
    --pink: rgb(244, 143, 177); */
    --purple: #00badb;
    --violet: #dad6d6;
    --pink: #db00c9;
    font-family: 'satoshi-regular', sans-serif;
  }
.content{
    z-index: 2;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.content img{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
    min-width: 300px;
    max-width: 380px;
    /* height: 450px; */
    object-fit: cover;
}
.hero {
    display: grid;
    grid-template-columns: 1fr 1fr;
    /* padding:10vh 0vh; */
    margin: 0 auto;
}
.name {
    font-size: clamp(2rem, 3vw, 5rem); 
    margin: 0;
    margin-bottom: 24px;
    font-weight: 500;
}

.color_text{
    animation: background-pan 3s linear infinite;
    background: linear-gradient(
      to right,
      var(--purple),
      var(--violet),
      var(--pink),
      var(--purple)
    );
    background-size: 200%;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    white-space: nowrap;
}
@keyframes background-pan {
    from {
      background-position: 0% center;
    }
    
    to {
      background-position: -200% center;
    }
  }
.salu {
    font-size: 1rem;
    margin: 0;
    /* color: rgba(255, 255, 255, 0.7); */
}
.text-content {
   text-align: left;
   padding: 40px;
   display: flex;
    flex-direction: column;
    justify-content: center;
}

.desc {
    font-size: 1.2rem;
    /* color: rgba(255, 255, 255, 0.7); */
    margin-bottom: 20px;
    font-weight: lighter;
}
.desc::after {
    content: "";
    display: block;
    width: 50px;
    border-bottom: 1px solid white;
    margin-top: 0.5rem;
}

.btns {
    display: flex;
    gap: 1rem;
}

.button {
    padding: 0.5rem 1rem;
    border: none;
    border-radius: 5px;
    background:#f3e7f5;
    /* color: white; */
    cursor: pointer;
    font-family: 'satoshi-light', sans-serif;
}
.button:hover {
    background: rgba(255, 255, 255, 0.2);
}
.button:active {
    background: rgba(255, 255, 255, 0.3);
}
.button:focus {
    outline: none;
}
.button:active {
    transform: scale(0.95);
}
.button {
    transition: all 0.3s ease;
}
a{
    text-decoration: none;
}
@media (max-width: 768px){
    .hero {
       grid-template-areas: "content content content" "text-content text-content text-content";
    }
    .text-content {
        text-align: center;
        grid-area: text-content;
    }
    .btns {
        justify-content: center;
    }
    .content {
        grid-area: content;
    }
    .content img{
        /* height: 320px; */
    }
    .hero {
        padding: 1px 0vh;
        /* margin-bottom: 180px; */
    }
}
@media (min-width: 1200px){
    .text-content h1 {
        font-size: 6rem;
    }
    .text-content .salu {
        font-size: 3rem;
    }
    .desc {
        font-size: 2rem;
    }
    .hero {
        width: 85vw;
        margin-left: auto;
        margin-right: auto;
        height: 90vh;
        /* padding: 20vh 0vh; */
    }
}

